--- a/config.yaml
+++ b/config.yaml
@@ -22,18 +22,16 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
-    "SFM":
-        filters: ["SFM", "Structure from Motion"]
-    "Visual Localization":
-        filters: ["Visual Localization","Camera Localization",
-                  "Camera Re-localisation","Loop Closure Detection",
-                  "visual place recognition","image retrieval"]
-    "Keypoint Detection":
-        filters: ["Keypoint Detection", "Feature Descriptor"]
-    "Image Matching":
-        filters: ["Image Matching", "Keypoint Matching", 
-                  "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
+    "Robotics": 
+        filters: ["Diffusion Policy", "VLA"]
+    "World Models":
+        filters: ["World Models", "Video World Models"]
+    "Action Representation Learning":
+        filters: ["Action Representation", "Latent Action"]
+    # "Keypoint Detection":
+    #     filters: ["Keypoint Detection", "Feature Descriptor"]
+    # "Image Matching":
+    #     filters: ["Image Matching", "Keypoint Matching", 
+    #               "Line Segment Detection", "Local Feature Matching"]
+    # "NeRF":
+    #     filters: ["NeRF"]
